crates/plotnik-tests/tests/02-parser/recovery_unexpected/quantifier_after_capture.txt
Q = (a) @x*
------------------ DIAGNOSTICS -------------------
error: `*` applies to the pattern, so it must appear before `@x`
 --> query.ptk:1:11
  |
1 | Q = (a) @x*
  |           ^
  |
help: write `(a)* @x`
